--- a/src/Plugins/ThingsGateway.Modbus/ModbusServerDebugDriverPage.razor
+++ b/src/Plugins/ThingsGateway.Modbus/ModbusServerDebugDriverPage.razor
@@ -9,14 +9,12 @@
 @using ThingsGateway.Web.Foundation;
 @using Masa.Blazor
 @inherits DriverDebugUIBase
-<SerialClientPage @ref=serialClientPage></SerialClientPage>
+<TcpServerPage @ref=tcpServerPage></TcpServerPage>
 @if (_plc != null)
 {
     <MCard Flat Elevation="0">
         <MRow Class="my-1" NoGutters Justify="JustifyTypes.SpaceBetween" Align="AlignTypes.Center">
-            <MCheckbox Class="mx-1" Label=@(_plc.Description(x => x.Crc16CheckEnable)) Dense Outlined HideDetails="@("auto")" @bind-Value=@_plc.Crc16CheckEnable></MCheckbox>
-            <MTextField Class="mx-1" Label=@(_plc.Description(x => x.FrameTime)) Dense Outlined HideDetails="@("auto")" @bind-Value=@_plc.FrameTime></MTextField>
-            <MTextField Class="mx-1" Label=@(_plc.Description(x => x.CacheTimeout)) Dense Outlined HideDetails="@("auto")" @bind-Value=@_plc.CacheTimeout></MTextField>
+            <MCheckbox Class="mx-1" Label=@(_plc.Description(x => x.MulStation)) Dense Outlined HideDetails="@("auto")" @bind-Value=@_plc.MulStation></MCheckbox>
 
             <MTextField Class="mx-1" Label=@(_plc.Description(x => x.Station)) Dense Outlined HideDetails="@("auto")" @bind-Value=@_plc.Station></MTextField>
             <MTextField Class="mx-1" Label=@(_plc.Description(x => x.TimeOut)) Dense Outlined HideDetails="@("auto")" @bind-Value=@_plc.TimeOut></MTextField>
@@ -109,12 +107,12 @@
 
 @code
 {
-    private SerialClientPage serialClientPage;
-    private ThingsGateway.Foundation.Adapter.Modbus.ModbusRtu _plc
+    private TcpServerPage tcpServerPage;
+    private ThingsGateway.Foundation.Adapter.Modbus.ModbusServer _plc
     {
         get
         {
-            return plc as ThingsGateway.Foundation.Adapter.Modbus.ModbusRtu;
+            return plc as ThingsGateway.Foundation.Adapter.Modbus.ModbusServer;
         }
     }
 
@@ -122,9 +120,9 @@
     {
         if (firstRender)
         {
-            serialClientPage.LogAction = LogOut;
+            tcpServerPage.LogAction = LogOut;
             //载入配置
-            plc = new ThingsGateway.Foundation.Adapter.Modbus.ModbusRtu((SerialClient)serialClientPage.GetSerialClient());
+            plc = new ThingsGateway.Foundation.Adapter.Modbus.ModbusServer((TcpService)tcpServerPage.GetTGTcpServer());
             StateHasChanged();
         }
 
@@ -135,11 +133,11 @@
     public override void Dispose()
     {
         plc.SafeDispose();
-        serialClientPage.SafeDispose();
+        tcpServerPage.SafeDispose();
         base.Dispose();
     }
     public override string ToString()
     {
-        return nameof(ModbusRtu);
+        return nameof(ModbusServer);
     }
 }
