--- a/src/Plugins/ThingsGateway.Modbus/ModbusServerDebugDriverPage.razor
+++ b/src/Plugins/ThingsGateway.Modbus/ModbusServerDebugDriverPage.razor
@@ -101,7 +101,7 @@
                     <MRow Class="ml-2 mr-2 d-flex" NoGutters>
                         <MVirtualScroll Context="itemMessage" Height=@("calc(100vh - 500px)") OverscanCount=2 ItemSize="100" Items="item.OrderByDescending(a=>a.id).ToList()">
                             <ItemContent>
-                                <div class=@(itemMessage.isRed==null?"black--text":itemMessage.isRed==true?"red--text":"green--text")>
+                                <div title=@itemMessage.message class=@(itemMessage.isRed==null?" black--text ":itemMessage.isRed==true?" red--text ":"green--text ") style="white-space: nowrap !important;overflow: hidden !important; text-overflow: ellipsis !important;">
                                     @itemMessage.message
                                 </div>
 
